Ingress/ingress_resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: treecom-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: treecom.site
    http:
      paths:
      # Frontend route
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      # Backend API route
      - path: /submit
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
